hdone/objects/AuditReport__c.object
<CustomObject>
    <description>Audit reports (surveys) performed in system</description>
    <fields>
        <fullName>AddressTypeIdFormula__c</fullName>
        <description>Displays customer record ID or External Id if record is shared from Master org. Does logic to determine if need to use Source or Target Ids for formula. Needed to correctly update record after SF2SF sharing.</description>
        <formula>IF(NOT(ISBLANK(Address_Type__c)),
CASE(  SourceOrg__c  , &quot;Customer&quot;,
(CASE(  Address_Type__r.SourceOrg__c , &quot;Customer&quot;, CASESAFEID( Address_Type__c),
&quot;HealthDetail&quot;, Address_Type__r.ExternalId__c, &quot;Error&quot;)) ,
&quot;HealthDetail&quot;,
(CASE( Address_Type__r.SourceOrg__c , &quot;HealthDetail&quot;,Address_Type__r.ExternalId__c,
&quot;Customer&quot;, Address_Type__r.Remote_AddressType_Id__c , &quot;Error&quot;)) ,&quot;Error&quot;),
NULL)


/* Checks to see if Primary record is shared from customer org or Master org
Also looks at lookup records for same thing
Uses Name Connection to determine if shared from other org*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AddressTypeIdFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to Address Type for name of person and address for AuditReport. If no specific AddressType (i.e. phone audit) then other lookups are used.</description>
        <inlineHelpText>Name and location for audit report. Select link to see detailed information.</inlineHelpText>
        <label>Address Type</label>
        <referenceTo>Address_Type__c</referenceTo>
        <relationshipLabel>AuditReports</relationshipLabel>
        <relationshipName>AuditReports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>Used to indicate approval status.</description>
        <inlineHelpText>Used to indicate approval status</inlineHelpText>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Awaiting Approval</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assignment_ID__c</fullName>
        <inlineHelpText>AMT Assignment ID for tracking purposes</inlineHelpText>
        <label>Assignment ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuditSetting__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>AuditSetting</label>
        <referenceTo>AuditSetting__c</referenceTo>
        <relationshipLabel>AuditReports (AuditSetting)</relationshipLabel>
        <relationshipName>AuditReports1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Block_Worker__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If you too unhappy with the performance, please tick this , the worker  will be permanently blocked from working on your future assignments</description>
        <inlineHelpText>If you too unhappy with the performance, please tick this , the worker  will be permanently blocked from working on your future assignments</inlineHelpText>
        <label>Block Worker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bonus_Comments__c</fullName>
        <description>Provide some comments, to the worker related to Bonus</description>
        <inlineHelpText>Provide some comments, to the worker related to Bonus</inlineHelpText>
        <label>Bonus Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bonus_Error__c</fullName>
        <inlineHelpText>Error if occurred during processing of bonus</inlineHelpText>
        <label>Bonus Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bonus_Payment_Status__c</fullName>
        <inlineHelpText>Initially the status is set as Pending (via workflow)</inlineHelpText>
        <label>Bonus Payment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bonus_Unique_ID__c</fullName>
        <inlineHelpText>Unique ID for processing Bonus payments</inlineHelpText>
        <label>Bonus Unique ID</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bonus__c</fullName>
        <description>Enter the Bonus amount to the worker for the current job</description>
        <inlineHelpText>Enter the Bonus amount to the worker for the current job</inlineHelpText>
        <label>Bonus</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Call_Length__c</fullName>
        <description>Length of call in seconds. Used secoinds to be consistent with how native field is on Task</description>
        <inlineHelpText>Length of call in seconds</inlineHelpText>
        <label>Call Length</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments on audit report</description>
        <inlineHelpText>Comments on audit report</inlineHelpText>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completion_DateTime__c</fullName>
        <description>Completion date and time. Cannot insert just a time field, using this.</description>
        <inlineHelpText>Completion date and time if time is applicable</inlineHelpText>
        <label>Completion DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Confirmation__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Used to track back to Confirmations when applicable</description>
        <label>Confirmation</label>
        <referenceTo>Confirmation__c</referenceTo>
        <relationshipLabel>AuditReports</relationshipLabel>
        <relationshipName>AuditReports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContactIdFormula__c</fullName>
        <description>Displays customer record ID or External Id if record is shared from Master org. Does logic to determine if need to use Source or Target Ids for formula. Needed to correctly update record after SF2SF sharing.</description>
        <formula>IF(NOT(ISBLANK(Provider__c)),
CASE(  SourceOrg__c  , &quot;Customer&quot;,
(CASE(  Provider__r.SourceOrg__c , &quot;Customer&quot;, CASESAFEID( Provider__c),
&quot;HealthDetail&quot;, Provider__r.ExternalId__c, &quot;Error&quot;)) ,
&quot;HealthDetail&quot;,
(CASE( Provider__r.SourceOrg__c , &quot;HealthDetail&quot;,Provider__r.ExternalId__c,
&quot;Customer&quot;, Provider__r.Remote_Provider_Id__c , &quot;Error&quot;)) ,&quot;Error&quot;),
NULL)


/* Checks to see if Primary record is shared from customer org or Master org
Also looks at lookup records for same thing
Uses Name Connection to determine if shared from other org*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ContactIdFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_File__c</fullName>
        <description>Link to external file such as audio, report, etc.</description>
        <inlineHelpText>Link to external file</inlineHelpText>
        <label>External File</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>External Id for object. Used to map Ids from external systems</description>
        <externalId>true</externalId>
        <inlineHelpText>External Id for object. Used to map Ids from external systems</inlineHelpText>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flow_Status__c</fullName>
        <label>Flow Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Flow_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Identifier_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Identifier Type</label>
        <referenceTo>Identifier_Type__c</referenceTo>
        <relationshipLabel>AuditReports</relationshipLabel>
        <relationshipName>AuditReports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <description>Generic field to hold other information about AuditReport not captured elsewhere</description>
        <inlineHelpText>Generic field to hold other information about AuditReport</inlineHelpText>
        <label>Other</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Process_Builder_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Unfortunate field used to indicate if Process Builder ran to avoid recursive updates.</description>
        <label>Process Builder Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>Product Name</description>
        <inlineHelpText>Product Name</inlineHelpText>
        <label>Product Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Name</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to contact field. Used when AuditReport not related to an Address Type but is for an individual provider only.</description>
        <inlineHelpText>Lookup to provider. Only used if Address Type or Facility not populated.</inlineHelpText>
        <label>Provider</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>AuditReports</relationshipLabel>
        <relationshipName>AuditReports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QA_Review__c</fullName>
        <description>Fields to review for QA if any</description>
        <inlineHelpText>Fields to review for QA</inlineHelpText>
        <label>QA Review</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Type_Text__c</fullName>
        <description>Used for Salesforce to Salesforce to update Record Type</description>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used for Salesforce to Salesforce to update Record Type</inlineHelpText>
        <label>Record Type Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_AddressTypeId__c</fullName>
        <description>Remote AddressTypeId for Salesforce to Salesforce</description>
        <inlineHelpText>Remote AddressTypeId for Salesforce to Salesforce</inlineHelpText>
        <label>Remote AddressTypeId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Status__c</fullName>
        <description>Used to indicate how AuditReport should be handled for external customers. Do not want to delete reports as needed to Approve Mturk and accounting</description>
        <inlineHelpText>Customer Reporting Status for AuditReport</inlineHelpText>
        <label>Reporting Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Send to Customer</fullName>
                    <default>true</default>
                    <label>Send to Customer</label>
                </value>
                <value>
                    <fullName>Include in Customer Reports</fullName>
                </value>
                <value>
                    <fullName>Exclude from Customer</fullName>
                </value>
                <value>
                    <fullName>Exclude from Customer Reports</fullName>
                </value>
                <value>
                    <fullName>Address Not Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Response_10_Comments__c</fullName>
        <description>Audit response comments</description>
        <inlineHelpText>Audit response comments</inlineHelpText>
        <label>Response 10 Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_10__c</fullName>
        <description>Audit response</description>
        <inlineHelpText>Audit response</inlineHelpText>
        <label>Response 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_11_Comments__c</fullName>
        <description>Audit response comments</description>
        <inlineHelpText>Audit response comments</inlineHelpText>
        <label>Response 11 Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_11__c</fullName>
        <description>Audit response</description>
        <inlineHelpText>Audit response</inlineHelpText>
        <label>Response 11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_12_Comments__c</fullName>
        <description>Audit response comments</description>
        <inlineHelpText>Audit response comments</inlineHelpText>
        <label>Response 12 Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_12__c</fullName>
        <description>Audit response</description>
        <inlineHelpText>Audit response</inlineHelpText>
        <label>Response 12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sf2Sf_PartnerConnection_Id__c</fullName>
        <description>Sf2Sf PartnerConnectionId Id from PartnerNetworkConnection</description>
        <externalId>true</externalId>
        <inlineHelpText>Sf2Sf PartnerConnectionId Id from PartnerNetworkConnection</inlineHelpText>
        <label>Sf2Sf_PartnerConnection_Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sf2Sf_ShareId__c</fullName>
        <description>Id from PartnerNetworkRecordConnection for shared record.</description>
        <externalId>true</externalId>
        <inlineHelpText>Id from PartnerNetworkRecordConnection for shared record.</inlineHelpText>
        <label>Sf2Sf ShareId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sf2Sf_ShareName__c</fullName>
        <description>Sharing name for Salesforce to Salesforce. Uses Custom setting to get name as PartnerNetworkConnection name cannot be changed and can be confusing</description>
        <inlineHelpText>Sharing name for Salesforce to Salesforce from Custom Setting</inlineHelpText>
        <label>Sf2Sf_ShareName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sf2Sf_ShareStatus__c</fullName>
        <description>Populates shared status for Salesforce to Salesforce connection. Cannot read status from object only from PartnerNetworkConnection object</description>
        <inlineHelpText>Shared status for Salesforce to Salesforce connection. Not real time.</inlineHelpText>
        <label>Sf2Sf_ShareStatus</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceOrg__c</fullName>
        <description>Identifies which is source org for record. If record is shared FROM customer to HealthDetail then Customer else if shared other way HealthDetail. Was using formula fields but getting relationship errors.</description>
        <inlineHelpText>Identifies which is source org for record Customer or HealthDetail</inlineHelpText>
        <label>SourceOrg</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>HealthDetail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Generic field used for other information necessary for audit report.</description>
        <inlineHelpText>Type of audit report if applicable</inlineHelpText>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User that completed Audit Report.</description>
        <inlineHelpText>User that completed Audit Report</inlineHelpText>
        <label>CompletedBy</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AuditReports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Worker__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Mturk Worker for AuditReport. Redundant from WorkerAuditReport object but used for Approval process to Auto Approve some records</description>
        <inlineHelpText>Mturk Worker for AuditReport</inlineHelpText>
        <label>Worker</label>
        <referenceTo>Worker__c</referenceTo>
        <relationshipLabel>AuditReports</relationshipLabel>
        <relationshipName>AuditReports</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>AuditReport</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Provider__c</columns>
        <columns>Completion_DateTime__c</columns>
        <columns>Address_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Current_Month</fullName>
        <columns>NAME</columns>
        <columns>Provider__c</columns>
        <columns>Completion_DateTime__c</columns>
        <columns>Address_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>Current Month</label>
    </listViews>
    <listViews>
        <fullName>Current_Quarter</fullName>
        <columns>NAME</columns>
        <columns>Completion_DateTime__c</columns>
        <columns>Provider__c</columns>
        <columns>Address_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>Current Quarter</label>
    </listViews>
    <listViews>
        <fullName>Last_Week</fullName>
        <columns>NAME</columns>
        <columns>Completion_DateTime__c</columns>
        <columns>Provider__c</columns>
        <columns>Address_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>Last Week</label>
    </listViews>
    <listViews>
        <fullName>Previous_Month</fullName>
        <columns>NAME</columns>
        <columns>Completion_DateTime__c</columns>
        <columns>Provider__c</columns>
        <columns>Address_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>Previous Month</label>
    </listViews>
    <listViews>
        <fullName>Previous_Quarter</fullName>
        <columns>NAME</columns>
        <columns>Completion_DateTime__c</columns>
        <columns>Provider__c</columns>
        <columns>Address_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>Previous Quarter</label>
    </listViews>
    <listViews>
        <fullName>This_Week</fullName>
        <columns>NAME</columns>
        <columns>Completion_DateTime__c</columns>
        <columns>Provider__c</columns>
        <columns>Address_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>This Week</label>
    </listViews>
    <listViews>
        <fullName>Today</fullName>
        <columns>NAME</columns>
        <columns>Completion_DateTime__c</columns>
        <columns>Provider__c</columns>
        <columns>Address_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>Today</label>
    </listViews>
    <nameField>
        <displayFormat>ARN-{00000000}</displayFormat>
        <label>AuditReport Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AuditReports</pluralLabel>
    <recordTypes>
        <fullName>In_Person</fullName>
        <active>true</active>
        <description>Audit Reports done in person</description>
        <label>In Person</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mturk_General</fullName>
        <active>true</active>
        <description>General Mturk tasks. Not phone related</description>
        <label>Mturk General</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mturk_Phone</fullName>
        <active>true</active>
        <description>MTurk Phone Audit Reports</description>
        <label>Mturk Phone</label>
    </recordTypes>
    <recordTypes>
        <fullName>Phone</fullName>
        <active>true</active>
        <description>Audit Reports done over phone</description>
        <label>Phone</label>
    </recordTypes>
    <recordTypes>
        <fullName>Quality_Review</fullName>
        <active>true</active>
        <description>Quality Review Reports</description>
        <label>Quality Review</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Comments_Required</fullName>
        <active>true</active>
        <description>Comments are required if Report is Rejected or worker is blocked for Amazon Mechanical Turk records. API requires comments in this field. Class is using this requirement</description>
        <errorConditionFormula>AND(
ISBLANK( Comments__c ),
OR(
RecordType.DeveloperName = &quot;Mturk General&quot;, RecordType.DeveloperName = &quot;Mturk General&quot;
),
OR(
   ISPICKVAL( Approval_Status__c ,&quot;Rejected&quot;),  
    Block_Worker__c 
  )
)</errorConditionFormula>
        <errorDisplayField>Comments__c</errorDisplayField>
        <errorMessage>Comments are required if Report is Rejected or Worker is Blocked and record is going to Amazon Mechanical Turk. Please check values and change as needed</errorMessage>
    </validationRules>
</CustomObject>